tests/baselines/reference/invalidBooleanAssignments.errors.txt
==== tests/cases/compiler/invalidBooleanAssignments.ts (10 errors) ====
    var x = true;
    
    var a: number = x;
        ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'boolean' to 'number'.
    var b: string = x;
        ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'boolean' to 'string'.
    var c: void = x;
        ~~~~~~~~~~~
!!! error TS2011: Cannot convert 'boolean' to 'void'.
    var d: typeof undefined = x;
    
    enum E { A }
    var e: E = x;
        ~~~~~~~~
!!! error TS2011: Cannot convert 'boolean' to 'E'.
    
    class C { foo: string }
    var f: C = x;
        ~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'C':
!!! 	Type 'Boolean' is missing property 'foo' from type 'C'.
    
    interface I { bar: string }
    var g: I = x;
        ~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'I':
!!! 	Type 'Boolean' is missing property 'bar' from type 'I'.
    
    var h: { (): string } = x;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to '() => string':
!!! 	Type '() => string' requires a call signature, but type 'Boolean' lacks one.
    var h2: { toString(): string } = x; // no error
    
    module M { export var a = 1; }
    M = x;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2011: Cannot convert 'boolean' to 'T'.
    }
    i = x;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.